WEB-835 fix: remove scrollbar and improve layout in Upload Client Signature dialog

--- a/src/app/clients/clients-view/custom-dialogs/upload-signature-dialog/upload-signature-dialog.component.scss
+++ b/src/app/clients/clients-view/custom-dialogs/upload-signature-dialog/upload-signature-dialog.component.scss
@@ -8,6 +8,7 @@
 
 :host {
   display: block;
+  overflow: hidden;
 }
 
 [mat-dialog-title] {
@@ -17,8 +18,8 @@
 }
 
 div {
-  padding: 0 1.25rem 1rem;
-  min-width: 25rem;
+  padding: 0 1.5rem 1.25rem;
+  min-width: 30rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
